# rust-rocket-postgres-diesel

./: .env  .gitignore  Cargo.toml  Makefile  docker-composee.yml
migrations/2023-04-19-223041_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs
src/controller/post/: post_controller.rs
src/domain/: error.rs  post.rs
src/infra/: db.rs  mod.rs
